change tests and optimize imports